--- a/01_Seoul_Bike_Trip_Duration_Prediction/01_EDA.ipynb
+++ b/01_Seoul_Bike_Trip_Duration_Prediction/01_EDA.ipynb
@@ -16,8 +16,8 @@
     "The Data used include trip duration, trip distance, pickup-dropoff latitude and longitude, \n",
     "temperature, precipitation, wind speed, humidity, solar radiation, snowfall, ground temperature and 1-hour average dust concentration.\n",
     "### Acknowledgements\n",
-    "V E, Sathishkumar (2020), \"Seoul Bike Trip duration prediction\", Mendeley Data, V1, doi: 10.17632/gtfh9z865f.1\n",
-    "Sathishkumar V E, Jangwoo Park, Yongyun Cho, Seoul bike trip duration prediction using data mining techniques, IET Intelligent Transport Systems, doi: 10.1049/iet-its.2019.0796\n",
+    "- V E, Sathishkumar (2020), \"Seoul Bike Trip duration prediction\", Mendeley Data, V1, doi: 10.17632/gtfh9z865f.1\n",
+    "- Sathishkumar V E, Jangwoo Park, Yongyun Cho, Seoul bike trip duration prediction using data mining techniques, IET Intelligent Transport Systems, doi: 10.1049/iet-its.2019.0796\n",
     "### Goal\n",
     "Predict the trip duration"
    ],
@@ -124,6 +124,65 @@
   {
    "cell_type": "markdown",
    "source": [
+    "**_duration_range_**"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "duration_order = ['00-30', '30-60', '60-90', '90-120']\n",
+    "def duration_range(duration):\n",
+    "    if duration>=0 and duration<=30:\n",
+    "        return duration_order[0]\n",
+    "    elif duration>30 and duration<60:\n",
+    "        return duration_order[1]\n",
+    "    elif duration>=60 and duration<=90:\n",
+    "        return duration_order[2]\n",
+    "    else:\n",
+    "        return duration_order[3]\n",
+    "\n",
+    "df['duration_range_'] = df['Duration'].apply(duration_range)\n",
+    "\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(7,5), dpi=100)\n",
+    "sns.countplot(data=df, x='duration_range_', order=duration_order, ax=ax);"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "distance_order = ['0-5000', '5000-10000', '10000-15000', '15000+']\n",
+    "distance_order_str = str(distance_order).strip('[').strip(']').split()\n",
+    "def distance_range(distance):\n",
+    "    if distance>=0 and distance<=5000:\n",
+    "        return distance_order[0]\n",
+    "    elif distance>5000 and distance<10000:\n",
+    "        return distance_order[1]\n",
+    "    elif distance>=10000 and distance<=15000:\n",
+    "        return distance_order[2]\n",
+    "    else:\n",
+    "        return distance_order[3]\n",
+    "\n",
+    "df['distance_range_'] = df['Distance'].apply(distance_range)\n",
+    "\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(7,5), dpi=100)\n",
+    "sns.countplot(data=df, x='distance_range_', order=distance_order, hue='duration_range_', hue_order=duration_order, ax=ax);"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "**_time_of_day_**"
    ],
    "metadata": {}
@@ -132,6 +191,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "day_order = ['Morning', 'Afternoon', 'Evening', 'Night']\n",
     "def time_of_day(hr):\n",
     "    if hr>=5 and hr<=12:\n",
     "        return 'Morning'\n",
@@ -142,16 +202,11 @@
     "    else:\n",
     "        return 'Night'\n",
     "\n",
-    "df['time_of_day_'] = df['Phour'].apply(time_of_day)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "sns.countplot(data=df, x='time_of_day_');"
+    "df['time_of_day_'] = df['Phour'].apply(time_of_day)\n",
+    "\n",
+    "fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(15,5), dpi=100)\n",
+    "sns.countplot(data=df, x='time_of_day_', order=day_order, hue='distance_range_', hue_order=distance_order, ax=ax[0]);\n",
+    "sns.countplot(data=df, x='time_of_day_', order=day_order, hue='duration_range_', hue_order=duration_order, ax=ax[1]);"
    ],
    "outputs": [],
    "metadata": {}
@@ -170,10 +225,9 @@
     "df['long_diff_'] = abs(df['PLong'] - df['DLong'])\n",
     "df['latd_diff_'] = abs(df['PLatd'] - df['DLatd'])\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(15,5), dpi=75)\n",
-    "\n",
-    "sns.scatterplot(data=df, x='long_diff_', y='latd_diff_', hue='Distance', palette='viridis', alpha=0.2, ax=ax[0]);\n",
-    "sns.scatterplot(data=df, x='long_diff_', y='latd_diff_', hue='Duration', palette='viridis', alpha=0.2, ax=ax[1]);"
+    "fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(15,5), dpi=100)\n",
+    "sns.scatterplot(data=df, x='long_diff_', y='latd_diff_', hue='distance_range_', hue_order=distance_order, alpha=0.5, ax=ax[0]);\n",
+    "sns.scatterplot(data=df, x='long_diff_', y='latd_diff_', hue='duration_range_', hue_order=duration_order, alpha=0.5, ax=ax[1]);"
    ],
    "outputs": [],
    "metadata": {}
@@ -196,7 +250,7 @@
    "execution_count": null,
    "source": [
     "num_geographical_PCs = 3\n",
-    "geographical_cols = ['Distance', 'Haversine', 'PLong', 'DLong', 'PLatd', 'DLatd']\n",
+    "geographical_cols = ['Distance', 'Haversine', 'PLong', 'DLong', 'PLatd', 'DLatd', 'long_diff_', 'latd_diff_']\n",
     "\n",
     "geographical_PCs, geographical_explained_variance_ratio = pca_pipe(df[geographical_cols], n=num_geographical_PCs)\n",
     "print(f\"geographical_explained_variance_ratio = {geographical_explained_variance_ratio.sum()}\")\n",
@@ -204,20 +258,20 @@
     "geo_PC_cols = ['geo_PC1_', 'geo_PC2_', 'geo_PC3_']\n",
     "df[geo_PC_cols] = geographical_PCs\n",
     "\n",
-    "fig = plt.figure(figsize=(30,5), dpi=75)\n",
+    "fig = plt.figure(figsize=(30,5), dpi=100)\n",
     "\n",
     "ax1 = fig.add_subplot(141, projection = '3d')\n",
-    "ax1.scatter(df.geo_PC1_, df.geo_PC2_, df.geo_PC3_, c=df.Duration);\n",
+    "ax1.scatter(df.geo_PC1_, df.geo_PC2_, df.geo_PC3_, alpha=0.1);\n",
     "ax1.set_xlabel(geo_PC_cols[0]); ax1.set_ylabel(geo_PC_cols[1]); ax1.set_zlabel(geo_PC_cols[2]);\n",
     "\n",
     "ax2 = fig.add_subplot(142)\n",
-    "sns.scatterplot(data=df, x='geo_PC1_', y='geo_PC2_', hue='Duration', palette='viridis', alpha=0.5, ax=ax2);\n",
+    "sns.scatterplot(data=df, x='geo_PC1_', y='geo_PC2_', hue='duration_range_', hue_order=duration_order, alpha=0.5, ax=ax2);\n",
     "\n",
     "ax3 = fig.add_subplot(143)\n",
-    "sns.scatterplot(data=df, x='geo_PC1_', y='geo_PC3_', hue='Duration', palette='viridis', alpha=0.5, ax=ax3);\n",
+    "sns.scatterplot(data=df, x='geo_PC1_', y='geo_PC3_', hue='duration_range_', hue_order=duration_order, alpha=0.5, ax=ax3);\n",
     "\n",
     "ax4 = fig.add_subplot(144)\n",
-    "sns.scatterplot(data=df, x='geo_PC2_', y='geo_PC3_', hue='Duration', palette='viridis', alpha=0.5, ax=ax4);"
+    "sns.scatterplot(data=df, x='geo_PC2_', y='geo_PC3_', hue='duration_range_', hue_order=duration_order, alpha=0.5, ax=ax4);"
    ],
    "outputs": [],
    "metadata": {}
@@ -225,7 +279,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**_overall_weather_PCA_**\n",
+    "**_weather_PCA_**\n",
     "\n",
     "We use PCA to convert the weather related features -\n",
     "\n",
@@ -248,14 +302,14 @@
     "weather_PC_cols = ['weather_PC1_', 'weather_PC2_', 'weather_PC3_']\n",
     "df[weather_PC_cols] = weather_PCs\n",
     "\n",
-    "fig = plt.figure(figsize=(30,5), dpi=75)\n",
+    "fig = plt.figure(figsize=(30,5), dpi=100)\n",
     "\n",
     "ax1 = fig.add_subplot(141, projection = '3d')\n",
-    "ax1.scatter(df.weather_PC1_, df.weather_PC2_, df.weather_PC3_, c=df.Duration);\n",
+    "ax1.scatter(df.weather_PC1_, df.weather_PC2_, df.weather_PC3_, alpha=0.1);\n",
     "ax1.set_xlabel(weather_PC_cols[0]); ax1.set_ylabel(weather_PC_cols[1]); ax1.set_zlabel(weather_PC_cols[2]);\n",
     "\n",
     "ax2 = fig.add_subplot(142)\n",
-    "sns.scatterplot(data=df, x='weather_PC1_', y='weather_PC2_', hue='Duration', palette='viridis', alpha=0.5, ax=ax2);\n",
+    "sns.scatterplot(data=df, x='weather_PC1_', y='weather_PC2_', hue='duration_range_', hue_order=duration_order, alpha=0.5, ax=ax2);\n",
     "\n",
     "ax3 = fig.add_subplot(143)\n",
     "sns.scatterplot(data=df, x='weather_PC1_', y='weather_PC2_', hue='Pmonth', palette='Set1', alpha=0.5, ax=ax3);\n",
@@ -301,7 +355,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "cat_cols = ['Pmonth', 'Pday', 'Phour', 'Pmin', 'PDweek', 'Dmonth', 'Dday', 'Dhour', 'Dmin', 'DDweek', 'time_of_day_']"
+    "cat_cols = ['Pmonth', 'Pday', 'Phour', 'Pmin', 'PDweek', 'Dmonth', 'Dday', 'Dhour', 'Dmin', 'DDweek', 'time_of_day_', 'distance_range_', 'duration_range_']"
    ],
    "outputs": [],
    "metadata": {}
@@ -376,10 +430,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "fig, ax = plt.subplots(ncols=2, nrows=1, figsize=(15,4), dpi=100)\n",
+    "fig, ax = plt.subplots(ncols=2, nrows=1, figsize=(15,5), dpi=100)\n",
     "\n",
-    "sns.scatterplot(data=df, x='Distance', y='Duration', palette='viridis', alpha=0.5, ax=ax[0], hue='long_diff_');\n",
-    "sns.scatterplot(data=df, x='weather_PC1_', y='Duration', palette='Set1', alpha=0.5, ax=ax[1], hue='time_of_day_');"
+    "sns.scatterplot(data=df, x='Distance', y='Duration', hue='time_of_day_', alpha=0.5, ax=ax[0]);\n",
+    "sns.scatterplot(data=df, x='weather_PC1_', y='long_diff_', hue='duration_range_', alpha=0.5, ax=ax[1]);"
    ],
    "outputs": [],
    "metadata": {}
@@ -404,10 +458,22 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "fig, ax = plt.subplots(ncols=2, nrows=1, figsize=(15,4), dpi=100)\n",
+    "fig, ax = plt.subplots(ncols=2, nrows=1, figsize=(20,5), dpi=100)\n",
     "\n",
     "sns.countplot(data=df, x='Pmonth', hue='PDweek', ax=ax[0]);\n",
     "sns.countplot(data=df, x='Phour', hue='PDweek', ax=ax[1]);"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "fig, ax = plt.subplots(ncols=2, nrows=1, figsize=(20,5), dpi=100)\n",
+    "\n",
+    "sns.countplot(data=df, x='Pmonth', hue='time_of_day_', ax=ax[0]);\n",
+    "sns.countplot(data=df, x='Phour', hue='duration_range_', ax=ax[1]);"
    ],
    "outputs": [],
    "metadata": {}
@@ -437,7 +503,7 @@
     "sns.barplot(data=df, x='PDweek', y='Duration', ax=ax[1], hue='time_of_day_');\n",
     "ax[1].legend(loc=(1.01,0.3));\n",
     "sns.barplot(data=df, x='Pmonth', y='Duration', ax=ax[2], hue='time_of_day_');\n",
-    "ax[2].legend(loc=(1.01,0.3));\n"
+    "ax[2].legend(loc=(1.01,0.3));"
    ],
    "outputs": [],
    "metadata": {}
@@ -454,7 +520,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Pairplot"
+    "### (Customary) Pairplot"
    ],
    "metadata": {}
   },
@@ -462,22 +528,17 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "cols = ['Duration', 'Distance', 'Phour', 'weather_PC1_', 'geo_PC3_', 'time_of_day_']\n",
-    "sns.pairplot(df[cols], hue='time_of_day_', diag_kind='kde', corner=True);"
+    "cols = ['Distance', 'weather_PC1_', 'geo_PC3_', 'long_diff_','duration_range_']\n",
+    "sns.pairplot(df[cols], hue='duration_range_', hue_order=duration_order, diag_kind='kde', corner=False);"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "- The kde plots for different Time_of_Day shows that a large no. of trips happen in mornings and evenings. "
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
